k8s-elk/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-system
spec:
  rules:
  - host: kibana.you.com
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
